# edtext

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
src/edtext/: __init__.py  edtext.py
tests/: test_edtext.py
