# More details about what can go in this file:
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[project]
name = "edtext"
description = "Manipulate text with ed-like operations"
readme = "README.rst"
license = "Apache-2.0"
authors = [
    {name = "Ned Batchelder", email = "ned@nedbatchelder.com"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">= 3.11"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage",
    "pytest",
    "ty",
]

[tool.setuptools.dynamic]
version.attr = "edtext.__version__"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"
